Se agregan nuevos botones

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,33 @@
-<app-usuarios></app-usuarios>
+<div class="main-body">
+  <div class="container">
+    <div>
+      <h1 class="main-title">Usuarios</h1>
+    </div>
+    <div class="buttons">
+      <button>Nuevo Usuario</button>
+      <div></div>
+      <button>Eliminar</button>
+    </div>
+  </div>
+  <table class="usuarios-table">
+    <tr class="main-tr">
+      <th>Id de usuario</th>
+      <th>Nombre</th>
+      <th>Sucursal</th>
+      <th>Rol</th>
+    </tr>
+    <tr>
+      <td>1010</td>
+      <td>Miguel</td>
+      <td>La Paz</td>
+      <td>Gerente</td>
+    </tr>
+    <tr>
+      <td>1020</td>
+      <td>Angel</td>
+      <td>La Paz</td>
+      <td>Gerente</td>
+    </tr>
+  </table>
+</div>
 <router-outlet></router-outlet>
